--- a/src/Pages/Welcome.module.css
+++ b/src/Pages/Welcome.module.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  padding: 2rem;
 }
 
 .container h1 {
@@ -67,4 +68,23 @@ li {
   color: white;
   transition: 0.3s;
   font-weight: 700;
+}
+
+@media (max-width: 598px) {
+  .container h1 {
+    font-size: 2.5rem;
+    color: #014f86;
+    border-bottom: 3px solid #014f86;
+  }
+
+  .rules-container h2 {
+    font-size: 2rem;
+    color: rgba(0, 0, 0, 0.758);
+  }
+
+  ul {
+    list-style: none;
+    font-size: 1rem;
+    color: rgba(0, 0, 0, 0.758);
+  }
 }
