--- a/src/Components/UI/Layout/Layout.module.css
+++ b/src/Components/UI/Layout/Layout.module.css
@@ -1,4 +1,11 @@
 .main {
-  margin: 8rem auto;
+  margin: 2rem auto;
   width: 100%;
+}
+
+@media (max-width: 540px) {
+  .main {
+    margin: 0rem auto;
+    width: 100%;
+  }
 }
