--- a/src/Components/UI/Navigation/Navigation.module.css
+++ b/src/Components/UI/Navigation/Navigation.module.css
@@ -9,6 +9,18 @@
 }
 
 .nav h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: white;
+}
+
+@media (max-width: 540px) {
+  .nav {
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #014f86;
+    padding: 0 10%;
+  }
 }
